2018-05-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Partial fraction expansion

2018-05-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Match title (and country for currencies) in completion suggestion list
	* Show currency flag in result when currency code is used

2018-05-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Search box for functions, variables, units, and long unit conversion lists
	* Context menu for conversion unit list, and middle click for add to expression
	* Use a searchable list view for convert to selection in unit manager

2018-04-28 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Flags for currencies (flags collected by majumeke)

2018-04-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix set (optimal) prefix when result is converted to composite unit (with prefix)

2018-04-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* "to"-conversion for physical constants

2018-04-08 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support for "handle vector" argument property

2018-04-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Time zone conversion

2018-04-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Allow user to change decimal separator (and consequently argument separator)

2018-03-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix function completion

2018-03-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use the currency menu structure for to button menu when currency unit in result,
	  and the display all remaining units in the first more menu for other units
	* List all currencies in conversion tab
	* Hide hidden items (including extra currencies) from completion
	* Use recursive directory creation
	* Fix save/load of interval arithmetic state
	* Add version command line option

2018-02-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add integrate() and dsolve() to button menu

2018-02-07 Hanna Knutsson <hanna.knutsson@protonmail.com>
