@@ -50,6 +50,7 @@
           <object class="GtkGrid">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="border_width">6</property>
             <property name="row_spacing">6</property>
             <property name="row_homogeneous">True</property>
             <child>
