@@ -1,3 +1,8 @@
+2018-05-27 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Calendar conversion
+	* Add "to" conversion for display of numbers in roman, sexagesimal, or time format
+
 2018-05-22 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Partial fraction expansion
